--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <textarea name="message"></textarea>
+    </form>
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
